--- a/index.html
+++ b/index.html
@@ -1,46 +1,53 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marketing Musculação</title>
-    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/style.css">
-</head>
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <div id="logo">
-            <img src="./assets/logo.png" alt="Logo">
-        </div>
-        <nav>
-            <span onclick="home()">Home</span>
-            <span onclick="plans()">Planos</span>
-            <span onclick="contact()">Contato</span>
-        </nav>
+      <div id="logo">
+        <img src="./assets/logo.png" alt="Logo" />
+      </div>
+      <nav>
+        <a class="navegacao" href="home.html">Home</a>
+        <a class="navegacao" href="planos.html">Planos</a>
+        <a class="navegacao" href="contato.html">Contato</a>
+      </nav>
     </header>
 
     <main class="mainHome">
-        <section id="content">
-            <h1>Diversas modalidades de treinos</h1>
-            <p>Obtenha bons resultados e alcance seus objetivos. Faça parte do nosso time! </p>
-        </section>
+      <section id="content">
+        <h1>Diversas modalidades de treinos</h1>
+        <p>
+          Obtenha bons resultados e alcance seus objetivos. Faça parte do nosso
+          time!
+        </p>
+      </section>
     </main>
 
     <footer>
-        <section id="social">
-            <a href="https://www.instagram.com/gabrielo.png/" target="_blank"><img src="./assets/instagram.png" alt="Instagram"></a>
-            <a href="https://www.linkedin.com/in/gabrielcostadev" target="_blank"><img src="./assets/linkedin.png" alt="Linkedin"></a>
-            <a href="mailto:gabrielcosta12377@hotmail.com"><img src="./assets/outlook.png" alt="Outlook"></a>
-        </section>
-        <section id="copyright">
-            <p>&copy; Gabriel Costa</p>
-        </section>
+      <section id="social">
+        <a href="https://www.instagram.com/gabrielo.png/" target="_blank"
+          ><img src="./assets/instagram.png" alt="Instagram"
+        /></a>
+        <a href="https://www.linkedin.com/in/gabrielcostadev" target="_blank"
+          ><img src="./assets/linkedin.png" alt="Linkedin"
+        /></a>
+        <a href="mailto:gabrielcosta12377@hotmail.com"
+          ><img src="./assets/outlook.png" alt="Outlook"
+        /></a>
+      </section>
+      <section id="copyright">
+        <p>&copy; Gabriel Costa</p>
+      </section>
     </footer>
 
     <script src="./scripts/script.js"></script>
-</body>
-
+  </body>
 </html>
